--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,19 +1,21 @@
 fieldset
 {
   width:300px;
-  height:250px;
+  height:400px;
 }
 body{
+    margin-top: 100px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin-bottom: 50px;
+}
+input,select{
+    width: 300px;
+    margin: 4px;
 }
 
-input.btn_submit
-{
-  border-style:dashed;
-  position:absolute;
-  bottom: 0.5em;
-  right:10px;
-  background-color:#f1ff00;
+button{
+    margin: 20px;
+    margin-left: 110px;
 }
